added create and delete ads

--- a/bulletin_board/bulletin_board_app/templates/bulletin_board_app/ad.html
+++ b/bulletin_board/bulletin_board_app/templates/bulletin_board_app/ad.html
@@ -11,7 +11,9 @@
         Дата создания: {{ad.dateCreation}}<br>
         Категория: {{ad.adCategory}}<br><br><br>
         {{ad.text}}<br><br>
-        <a class="btn btn-primary" href="{% url 'main_page' %}">На главную</a>
+        <a class="btn btn-primary" href="{% url 'main_page' %}">На главную</a><br><br>
+        <a class="btn btn-primary" href="{% url 'ad_update' ad.id %}">Редактировать объявление</a><br><br>
+        <a class="btn btn-primary" href="{% url 'ad_delete' ad.id %}">Удалить</a>
     {% endblock content %}
 </body>
 </html>
