added registration, my ads, restriction of access rights and updated forms

--- a/bulletin_board/bulletin_board_app/templates/bulletin_board_app/ad.html
+++ b/bulletin_board/bulletin_board_app/templates/bulletin_board_app/ad.html
@@ -12,8 +12,10 @@
         Категория: {{ad.adCategory}}<br><br><br>
         {{ad.text}}<br><br>
         <a class="btn btn-primary" href="{% url 'main_page' %}">На главную</a><br><br>
-        <a class="btn btn-primary" href="{% url 'ad_update' ad.id %}">Редактировать объявление</a><br><br>
-        <a class="btn btn-primary" href="{% url 'ad_delete' ad.id %}">Удалить</a>
+        {% if user.username == ad.author.username %}
+            <a class="btn btn-primary" href="{% url 'ad_update' ad.id %}">Редактировать объявление</a><br><br>
+            <a class="btn btn-primary" href="{% url 'ad_delete' ad.id %}">Удалить</a>
+        {% endif %}
     {% endblock content %}
 </body>
 </html>
