--- a/bulletin_board/templates/layout/parts/header.html
+++ b/bulletin_board/templates/layout/parts/header.html
@@ -7,15 +7,14 @@
 
      <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
        <li><a href="{% url 'main_page' %}" class="nav-link px-2 text-secondary">Home</a></li>
-       <li><a href="#" class="nav-link px-2 text-white">Features</a></li>
-       <li><a href="#" class="nav-link px-2 text-white">Pricing</a></li>
-       <li><a href="#" class="nav-link px-2 text-white">FAQs</a></li>
-       <li><a href="#" class="nav-link px-2 text-white">About</a></li>
+       <li><a href="{% url 'my_ads' %}" class="nav-link px-2 text-white">Мои объявления</a></li>
+       <li><a href="#" class="nav-link px-2 text-white">Мои отклики</a></li>
      </ul>
 
      <div class="text-end">
-       <button type="button" class="btn btn-outline-light me-2">Login</button>
-       <button type="button" class="btn btn-warning">Sign-up</button>
+       <a href="http://127.0.0.1:8000/accounts/login/" ><button type="button" class="btn btn-outline-light me-2">Login</button></a>
+       <a href="http://127.0.0.1:8000/accounts/logout/" ><button type="button" class="btn btn-outline-light me-2">Logout</button></a>
+       <a href="http://127.0.0.1:8000/accounts/signup/" ><button type="button" class="btn btn-warning">Sign-up</button></a>
      </div>
    </div>
  </div>
