--- a/bulletin_board/bulletin_board_app/templates/bulletin_board_app/ad_create.html
+++ b/bulletin_board/bulletin_board_app/templates/bulletin_board_app/ad_create.html
@@ -7,7 +7,7 @@
 
 <h3>Создание нового объявления</h3>
 
-<form method="POST">
+<form method="POST" enctype="multipart/form-data">
  {% csrf_token %}
  {{ form }}
    <input class="btn btn-success" type="submit" value="Создать">
