--- a/bulletin_board/templates/layout/parts/header.html
+++ b/bulletin_board/templates/layout/parts/header.html
@@ -6,7 +6,7 @@
      </a>
 
      <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-       <li><a href="{% url 'main_page' %}" class="nav-link px-2 text-secondary">Home</a></li>
+       <li><a href="{% url 'main_page' %}" class="nav-link px-2 text-secondary">Главная</a></li>
        <li><a href="{% url 'my_ads' %}" class="nav-link px-2 text-white">Мои объявления</a></li>
        <li><a href="#" class="nav-link px-2 text-white">Мои отклики</a></li>
      </ul>
