--- a/bulletin_board/bulletin_board_app/templates/bulletin_board_app/ad_create.html
+++ b/bulletin_board/bulletin_board_app/templates/bulletin_board_app/ad_create.html
@@ -7,10 +7,35 @@
 
 <h3>Создание нового объявления</h3>
 
-<form method="POST" enctype="multipart/form-data">
- {% csrf_token %}
- {{ form }}
-   <input class="btn btn-success" type="submit" value="Создать">
+<form method="POST" enctype="multipart/form-data" class="form-vertical">
+  {% csrf_token %}
+
+  <div class="form-group">
+    {{ form.title.label_tag }}
+    {{ form.title }}
+  </div><br>
+
+  <div class="form-group">
+    {{ form.text.label_tag }}
+    {{ form.text }}
+  </div><br>
+
+  <div class="form-group">
+    {{ form.adCategory.label_tag }}
+    {{ form.adCategory }}
+  </div><br>
+
+  <div class="form-group">
+    {{ form.image.label_tag }}
+    {{ form.image }}
+  </div><br>
+
+  <div class="form-group">
+    {{ form.file.label_tag }}
+    {{ form.file }}
+  </div><br>
+
+  <input class="btn btn-success" type="submit" value="Создать">
 </form>
 
 {% endblock content %}
