added video, confirm registartion in email

--- a/bulletin_board/bulletin_board_app/templates/bulletin_board_app/ad_create.html
+++ b/bulletin_board/bulletin_board_app/templates/bulletin_board_app/ad_create.html
@@ -31,6 +31,11 @@
   </div><br>
 
   <div class="form-group">
+    {{ form.video.label_tag }}
+    {{ form.video }}
+  </div><br>
+
+  <div class="form-group">
     {{ form.file.label_tag }}
     {{ form.file }}
   </div><br>
