--- a/bulletin_board/bulletin_board_app/templates/bulletin_board_app/ad.html
+++ b/bulletin_board/bulletin_board_app/templates/bulletin_board_app/ad.html
@@ -15,6 +15,17 @@
         {% if ad.image %}
             <img src="{{ ad.image.url }}" alt="{{ ad.title }}" width='600' height='auto'><br><br>
         {% endif %}
+        {% if ad.video %}
+            Прикрепленное видео:<br>
+            <video width="600" height="auto" controls>
+                <source src="{{ ad.video.url }}" type="video/mp4">
+                <source src="{{ ad.video.url }}" type="video/MOV">
+                <source src="{{ ad.video.url }}" type="video/avi">
+                <source src="{{ ad.video.url }}" type="video/webm">
+                <source src="{{ ad.video.url }}" type="video/mkv">
+                Ваш браузер не поддерживает видео тег.
+            </video>
+        {% endif %}<br>
         {% if ad.file %}
             Прикрепленный файл: <a href="{{ ad.file.url }}" download>{{ ad.file.name }}</a><br><br>
         {% endif %}<br>
