added bootstrap in ads.html

--- a/bulletin_board/bulletin_board_app/templates/bulletin_board_app/ad.html
+++ b/bulletin_board/bulletin_board_app/templates/bulletin_board_app/ad.html
@@ -32,8 +32,9 @@
         <a class="btn btn-primary" href="{% url 'main_page' %}">На главную</a><br><br>
         {% if user.username == ad.author.username %}
             <a class="btn btn-primary" href="{% url 'ad_update' ad.id %}">Редактировать объявление</a><br><br>
-            <a class="btn btn-primary" href="{% url 'ad_delete' ad.id %}">Удалить</a>
+            <a class="btn btn-primary" href="{% url 'ad_delete' ad.id %}">Удалить</a><br><br>
         {% endif %}
+        <a class="btn btn-primary" href="{% url 'main_page' %}">Откликнуться</a><br><br>
     {% endblock content %}
 </body>
 </html>
