--- a/bulletin_board/bulletin_board_app/templates/bulletin_board_app/ads.html
+++ b/bulletin_board/bulletin_board_app/templates/bulletin_board_app/ads.html
@@ -8,7 +8,15 @@
     <h3>Все объявления:</h3>
     {% if ads %}
         {% for ad in ads %}
-            <a href="{% url 'ad' ad.id %}">{{ad.title}} (Категория: {{ad.adCategory}})<br><br></a>
+            <div class="ad-block card mb-4">
+                <div class="card-body">
+                    <h3><a href="{% url 'ad' ad.id %}" class="card-title">{{ad.title}} (Категория: {{ad.adCategory}})</a></h3><br>
+                    <p class="card-text">{{ ad.text|truncatechars:100 }}</p><br>
+                    {% if ad.image %}
+                        <img src="{{ ad.image.url }}" alt="Изображение объявления" width='600' height='auto' class="img-fluid">
+                    {% endif %}
+                </div>
+            </div><br>
         {% endfor %}
 
         {% include 'bulletin_board_app/parts/paginator.html' %}
