--- a/bulletin_board/bulletin_board_app/templates/bulletin_board_app/ads.html
+++ b/bulletin_board/bulletin_board_app/templates/bulletin_board_app/ads.html
@@ -4,7 +4,7 @@
 {% endblock title %}
 
 {% block content %}
-    <h1>Добро пожаловать {{user.username}}!</h1>
+    <h1>Добро пожаловать {{user.username}}!</h1><br>
     <h3>Все объявления:</h3>
     {% if ads %}
         {% for ad in ads %}
