--- a/bulletin_board/bulletin_board_app/templates/bulletin_board_app/comments_on_my_ads.html
+++ b/bulletin_board/bulletin_board_app/templates/bulletin_board_app/comments_on_my_ads.html
@@ -4,22 +4,48 @@
 {% endblock title %}
 
 {% block content %}
-    <h1>Добро пожаловать {{user.username}}!</h1>
-    <h3>Отклики на ваши объявления:</h3>
+    <h1>Добро пожаловать {{user.username}}!</h1><br>
+    <h3>Отклики на ваши объявления:</h3><br>
+
     {% if user_has_ads %}
         {% if ads_with_comments %}
-            {% for ad in ads_by_current_user %}
-                {% for comment in ad.comments.all %}
-                    <div class="ad-block card mb-4">
-                        <div class="card-body">
-                            <h3>{{comment.commentAuthor}} оставил отклик на ваше объявление <a href="{% url 'ad' ad.id %}" class="card-title">{{ad.title}} (Категория: {{ad.adCategory}})<br><br></a></h3>
-                            <p class="card-text">{{ comment.text }}</p><br>
-                        </div>
-                    </div><br>
-                {% endfor %}
-            {% endfor %}
+            <form method="GET">
+                {% csrf_token %}
+                <label for="ad-select">Выберите отклики на конкретное объявление:</label>
+                <select id="ad-select" name="selected_ad">
+                    <option value="">Все объявления</option>
+                    {% for ad in ads_by_current_user %}
+                        <option value="{{ ad.id }}">{{ ad.title }}</option>
+                    {% endfor %}
+                </select>
+                <button type="submit">Показать отклики</button>
+            </form><br>
 
-            {% include 'bulletin_board_app/parts/paginator.html' %}
+            {% if selected_ad %}
+                <h3>Отклики на объявление "{{ selected_ad.title }}" (Категория: {{ selected_ad.adCategory }}):</h3>
+                    {% for comment in comments_for_selected_ad %}
+                        <div class="ad-block card mb-4">
+                            <div class="card-body">
+                                <h3>{{comment.commentAuthor}} оставил отклик на ваше объявление <a href="{% url 'ad' selected_ad.id %}" class="card-title">{{selected_ad.title}} (Категория: {{selected_ad.adCategory}})<br><br></a></h3>
+                                <p class="card-text">{{ comment.text }}</p><br>
+                            </div>
+                        </div><br>
+                    {% endfor %}
+
+            {% else %}
+                {% for ad in ads_by_current_user %}
+                    {% for comment in ad.comments.all %}
+                        <div class="ad-block card mb-4">
+                            <div class="card-body">
+                                <h3>{{comment.commentAuthor}} оставил отклик на ваше объявление <a href="{% url 'ad' ad.id %}" class="card-title">{{ad.title}} (Категория: {{ad.adCategory}})<br><br></a></h3>
+                                <p class="card-text">{{ comment.text }}</p><br>
+                            </div>
+                        </div><br>
+                    {% endfor %}
+                {% endfor %}
+
+                {% include 'bulletin_board_app/parts/paginator.html' %}
+            {% endif %}
 
         {% else %}
             <h6>На ваши объявления пока еще никто не оставил отклик:(</h6>
@@ -30,4 +56,13 @@
         <br>
         <a class="btn btn-primary" href="{% url 'ad_create' %}">Добавить объявление</a>
     {% endif %}
+
+
+
+
+
+
+
+
+
 {% endblock content %}
