--- a/bulletin_board/bulletin_board_app/templates/bulletin_board_app/comments_on_my_ads.html
+++ b/bulletin_board/bulletin_board_app/templates/bulletin_board_app/comments_on_my_ads.html
@@ -7,14 +7,14 @@
     <h1>Добро пожаловать {{user.username}}!</h1><br>
     <h3>Отклики на ваши объявления:</h3><br>
 
-    {% if user_has_ads %}
+    {% if ads %}
         {% if ads_with_comments %}
             <form method="GET">
                 {% csrf_token %}
                 <label for="ad-select">Выберите отклики на конкретное объявление:</label>
                 <select id="ad-select" name="selected_ad">
                     <option value="">Все объявления</option>
-                    {% for ad in ads_by_current_user %}
+                    {% for ad in ads %}
                         <option value="{{ ad.id }}">{{ ad.title }}</option>
                     {% endfor %}
                 </select>
@@ -28,17 +28,21 @@
                             <div class="card-body">
                                 <h3>{{comment.commentAuthor}} оставил отклик на ваше объявление <a href="{% url 'ad' selected_ad.id %}" class="card-title">{{selected_ad.title}} (Категория: {{selected_ad.adCategory}})<br><br></a></h3>
                                 <p class="card-text">{{ comment.text }}</p><br>
+                                <a class="btn btn-primary" href="{% url 'accept_comment' comment.id %}">Принять</a>
+                                <a class="btn btn-primary" href="{% url 'delete_comment' comment.id %}">Удалить</a>
                             </div>
                         </div><br>
                     {% endfor %}
 
             {% else %}
-                {% for ad in ads_by_current_user %}
+                {% for ad in ads %}
                     {% for comment in ad.comments.all %}
                         <div class="ad-block card mb-4">
                             <div class="card-body">
                                 <h3>{{comment.commentAuthor}} оставил отклик на ваше объявление <a href="{% url 'ad' ad.id %}" class="card-title">{{ad.title}} (Категория: {{ad.adCategory}})<br><br></a></h3>
                                 <p class="card-text">{{ comment.text }}</p><br>
+                                <a class="btn btn-primary" href="{% url 'accept_comment' comment.id %}">Принять</a>
+                                <a class="btn btn-primary" href="{% url 'delete_comment' comment.id %}">Удалить</a>
                             </div>
                         </div><br>
                     {% endfor %}
@@ -56,13 +60,5 @@
         <br>
         <a class="btn btn-primary" href="{% url 'ad_create' %}">Добавить объявление</a>
     {% endif %}
-
-
-
-
-
-
-
-
 
 {% endblock content %}
