--- a/bulletin_board/bulletin_board_app/templates/bulletin_board_app/ad_delete.html
+++ b/bulletin_board/bulletin_board_app/templates/bulletin_board_app/ad_delete.html
@@ -4,18 +4,19 @@
 {% endblock title %}
 
 {% block content %}
-  <h3>Удалить данное объявление?</h3>
-  <div class="card">
-   <div class="card-header">
-     <h3>
-       {{ ad.title }}
-     </h3>
-     Автор: {{ad.author}}<br>
-          Дата создания: {{ad.dateCreation}}<br>
-          Категория: {{ad.adCategory}}<br><br><br>
-          {{ad.text}}<br><br>
-  <form method="POST">
-    {% csrf_token %}
-     <input class="btn btn-success" type="submit" value="Удалить">
-  </form>
+    <br><h3>Удалить данное объявление?</h3><br>
+    <div class="card">
+        <div class="card-header">
+            <h3>{{ ad.title }}</h3>
+            <p>Автор: {{ad.author}}</p><br>
+            <p>Дата создания: {{ad.dateCreation}}</p><br>
+            <p>Категория: {{ad.adCategory}}</p><br><br>
+            <p>{{ad.text}}</p><br><br>
+
+            <form method="POST">
+                {% csrf_token %}
+                <input class="btn btn-success" type="submit" value="Удалить">
+            </form><br>
+        </div>
+    </div>
 {% endblock content %}
